--- a/README.Rmd
+++ b/README.Rmd
@@ -18,16 +18,26 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 'APCalign-app' is a Shiny interface to the ['APCalign' R package](https://traitecoevo.github.io/APCalign/).
-The app enables users to standardise their plant taxa names to current, accepted standards by the [Australian Plant Census (APC)](Australian Plant Census (APC))
+The app enables users to align their Australian plant taxon name strings and update to current, accepted standards by the [Australian Plant Census (APC)](Australian Plant Census (APC))
 
-To run the app:
+The app can be accessed at: 
 
+### To run the app locally:
+
+#### Installation:
+
+This app and its main dependency `APCalign` which is currently not on CRAN. 
+We will need install both of these from GitHub: 
+```{r, eval=FALSE}
+remotes::install_github("traitecoevo/APCalign")
+
+remotes::install_github("traitecoevo/APCalign-app")
+```
+
+#### Load app: 
 ```{r run}
-# install.packages("APCalign")
-# remotes::install_github("traitecoevo/APCalign")
+library(APCalign-app)
 
-library(shiny)
-
-runApp("align-app")
+align_app()
 ```
 
